fix all problems of images in posts

--- a/_posts/2016-01-14-cnn.md
+++ b/_posts/2016-01-14-cnn.md
@@ -15,7 +15,7 @@ $$
 
 下面这张图可以简单清晰的看到在电路分析中，卷积运算表示的意义：
 
-![Example](/Pictures/CNN/convolution2.gif)
+![Example](/imgs/CNN/convolution2.gif)
 
 > 图示方形脉冲波和指数衰退的脉冲波的卷积（后者可能出现于RC电路中），同样地重叠部分面积就相当于"t"处的卷积。注意到因为"g"是对称的，所以在这两张图中，反射并不会改变它的形状。图片来源 [Wikipedia](https://en.wikipedia.org/wiki/Convolution)
 
@@ -25,19 +25,19 @@ $$
 
 在计算机视觉和图像处理中，卷积中的**“滑动函数”**被称为卷积核(Kernel)，在信号处理中也成为滤波(Filter)，而且用的是线性滤波，即输出像素是输入领域像素的加权和。下面这个图就清晰的表达了这个运算：
 
-![Convolution_schematic](/Pictures/CNN/Convolution_schematic.gif)
+![Convolution_schematic](/imgs/CNN/Convolution_schematic.gif)
 
 > A good picture is more than 1000 words
 
 那这个核可以用来干什么呢？下面举一些直观的例子来看一下卷积运算在图像处理中的应用。处理图像当然要拿出这位美女 **Lena** 了。
 
-![Lena Origin](/Pictures/CNN/lena-origin.jpg)
+![Lena Origin](/imgs/CNN/lena-origin.jpg)
 
 > The First Lady of Internet
 
 下面列举出一些常见的卷积核，这几个卷积核是在 **Gimp** 的[官方文档](http://docs.gimp.org/en/plug-in-convmatrix.html)中看到的，不得不说这个开源神器是在强大，还提供自己加卷积处理图像的例子。
 
-![Gimp](/Pictures/CNN/gimp.png)
+![Gimp](/imgs/CNN/gimp.png)
 
 > `Filters` > `Generic` > `Convolution Matrix` 就可以找到这一功能
 
@@ -103,7 +103,7 @@ imshow(img_new)
 
 话说回来，使用文档中介绍的五种核得到的结果如下：
 
-![Convolution Lena](/Pictures/CNN/lena.jpg)
+![Convolution Lena](/imgs/CNN/lena.jpg)
 
 > 五种核表现出的直观理解
 
@@ -113,7 +113,7 @@ imshow(img_new)
 
 卷积神经网络 (Convolution Neural Networks) 在深度学习中有着举足轻重的地位，尤其是应用到图像分类 (Image Classification) 中是取得了很大的突破，例如 Facebook 中的图片自动标注。当然最近也有人将它运用到自然语言处理中 (Natural Language Processing)[^1], 下面我们来看看一个典型的卷积神经网络的结构。
 
-![Typical CNN](/Pictures/CNN/Typical_cnn.png)
+![Typical CNN](/imgs/CNN/Typical_cnn.png)
 
 > 一个典型的神经网络，其中包含两个卷积层，两个子采样层。图片来源 [Wikipedia](https://en.wikipedia.org/wiki/Convolution)
 
@@ -125,7 +125,7 @@ imshow(img_new)
 
 我们已经知道，一个卷积核会将图片生成为另一幅图像。所以我们在每个卷积层使用多个不同的卷积核组成一个卷积核组，不同的核在输入图片上的运算会得到不同的结果，就相当于一张图像的不同通道。当然这些卷积核组我们可以自动的学习出来。在此之后对于每个通道我们都会在后面加上非线性的激励函数。一般来说是 RELU、sigmoid 或者是 tanh 函数，加上非线性的激励函数就是给系统加上非线性因素，因为线性模型的表达能力往往不够[^2]。
 
-![一个用于图像的CNN网络](/Pictures/CNN/convnet.jpg)
+![一个用于图像的CNN网络](/imgs/CNN/convnet.jpg)
 
 > 一个使用 RELU 作为激励函数的 CNN 网络
 
@@ -137,7 +137,7 @@ imshow(img_new)
 
 池化 (Pooling) 又被称为下采样 (downsampling)，因为在利用卷积获得学习的特征后，实际上我们得到的参数还是非常的多，所以我们采用池化的方法继续减少参数。可以想象一下，训练像素大小为 $96\times96$ 的图片，假设在第一层我们要用 $8\times8$ 学 400 个特征。简单算一下我们就可以发现这层我们就得到了 $89^2 \times 400 = 3168400$ 个参数，其实还是很容易过拟合的。
 
-![Pooling](/Pictures/CNN/pooling.gif)
+![Pooling](/imgs/CNN/pooling.gif)
 
 > A another good picture worth 1000 words.
 
@@ -151,7 +151,7 @@ imshow(img_new)
 
 这是 Yann LeCun 在 1990 左右开发的第一个卷积网络，这个七层神经网络在当时取得了巨大成功，据说当年美国大多数银行就是用它来识别支票上面的手写数字的。
 
-![Lenet](/Pictures/CNN/lenet.gif)
+![Lenet](/imgs/CNN/lenet.gif)
 
 > 经典的 [Lenet-5](http://yann.lecun.com/exdb/lenet/index.html)
 
