a update of bolg about MathJax

--- a/_posts/2015-05-27-MathJax.md
+++ b/_posts/2015-05-27-MathJax.md
@@ -13,64 +13,34 @@ MathJax 是一款运行在浏览器中的开源的数学符号渲染引擎，使
 
 ## 网页中使用 Mathjax
 
+> **注**：目前已使用 MathJax 3，相比版本2有些许更新，这里仅展示新版本的使用特性。
+
 使用 **CDN** 服务器可以安全地使用 **Mathjax** 。在我的网页中添加一段 *Javascript* 脚本：
 
 ~~~markup
-<script type="text/javascript"
-  src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
-</script>
-~~~
-
-这是一个安全的 *https* 链接。当然你也可以用下面的代码块同时使用 *http* 和 *https* 链接。
-
-~~~markup
-<script type="text/javascript"
-  src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
-</script>
+<script type="text/javascript", id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js"></script>
 ~~~
 
 ## 进一步的配置
 
-在 MathJax 中，默认的 displayed 公式分隔符有 `$$...$$` 和 `\[…\]`,而默认的 inline 公式分隔符为 `(…)` ,当然这些都是可以自定义的。
+在 MathJax 中，默认的 displayed 公式分隔符有 `$$...$$` 和 `\[…\]`,而默认的 inline 公式分隔符为 `(…)` ，和MathJax 2一样，也可以自定义行内公式的配置。
 
 ~~~markup
-<!--//Latex Support-->
-<script type="text/x-mathjax-config">
-MathJax.Hub.Config({
-    tex2jax: {
-        inlineMath: [ ['$','$'], ["\\(","\\)"] ],
-        processEscapes: true
-    }
-});
+<script type="text/javascript">
+    MathJax = {
+        tex:{
+            inlineMath: [['$', '$'], ['\\(', '\\)']]
+        },
+        svg:{
+            fontCache: 'global'
+        }
+    };
 </script>
 ~~~
 
-使网页中可以支持引用 Latex 的源码，比如上面的引用。
+其它配置可以详见[TeX Input Processor Options](http://docs.mathjax.org/en/latest/options/input/tex.html)。
 
-~~~markup
-<script type="text/x-mathjax-config">
-MathJax.Hub.Config({
-    tex2jax: {
-        skipTags: ['script', 'no script', 'style', 'textarea', 'pre', 'code']
-    }
-    });
-</script>
-~~~
-
-让 Latex 的代码与其它 code 区分开来。防止有些高亮会起作用。
-
-~~~markup
-<script type="text/x-mathjax-config">
-MathJax.Hub.Queue(function() {
-    var all = MathJax.Hub.getAllJax(), i;
-    for(i=0; i < all.length; i += 1) {
-       all[i].SourceElement().parentNode.className += ' has-jax';
-    }
-});
-</script>
-~~~
-
-## 使用
+## 使用 Latex 书写网页公式
 
 ### 基础
 
@@ -209,11 +179,39 @@ $$
 
 $$ \begin{matrix} 1 & x & x^2 \\ 1 & y & y^2 \\ 1 & z & z^2 \\ \end{matrix} $$
 
-#### 加括号
+#### 矩阵的括号
 
 如果要对矩阵加括号，可以像上文中提到的一样，使用 `\left` 与 `\right`配合表示括号符号。也可以使用特殊的 matrix。即替换 `\begin{matrix}…\end{matrix}` 中的 matrix 为 `pmatrix`, `bmatrix`, `Bmatrix`, `vmatrix`, `Vmatrix`.
 
-如 pmatrix: $\begin{pmatrix}1&2\\3&4\\ \end{pmatrix}$, bmatrix: $\begin{bmatrix}1&2\\3&4\\ \end{bmatrix}$, Bmatrix: $\begin{Bmatrix}1&2\\3&4\\ \end{Bmatrix}$, vmatrix: $\begin{vmatrix}1&2\\3&4\\ \end{vmatrix}$, Vmatrix: $\begin{Vmatrix}1&2\\3&4\\ \end{Vmatrix}$.
+$$
+\begin{aligned}
+&\mbox{pmatrix:}
+\begin{pmatrix} 
+a & b \\
+c & d 
+\end{pmatrix}
+\mbox{,  bmatrix:}
+\begin{bmatrix} 
+a & b \\
+c & d 
+\end{bmatrix}
+\mbox{,  Bmatrix:}
+\begin{Bmatrix} 
+a & b \\
+c & d 
+\end{Bmatrix},\\[1em]
+&\mbox{vmatrix:}
+\begin{vmatrix} 
+a & b \\
+c & d 
+\end{vmatrix}
+\mbox{, Vmatrix:}
+\begin{Vmatrix} 
+a & b \\
+c & d 
+\end{Vmatrix}.
+\end{aligned}
+$$
 
 可以使用`\cdots` $\cdots$ `\ddots` $\ddots$ `\vdots` $\vdots$ 来省略矩阵中的元素，如：
 
@@ -248,13 +246,15 @@ $$
 
 就是由
 
-	\begin{align}
-	\sqrt{37} & = \sqrt{\frac{73^2-1}{12^2}} \\
-	 & = \sqrt{\frac{73^2}{12^2}\cdot\frac{73^2-1}{73^2}} \\
-	 & = \sqrt{\frac{73^2}{12^2}}\sqrt{\frac{73^2-1}{73^2}} \\
-	 & = \frac{73}{12}\sqrt{1 - \frac{1}{73^2}} \\
-	 & \approx \frac{73}{12}\left(1 - \frac{1}{2\cdot73^2}\right)
-	\end{align}
+~~~latex
+\begin{align}
+\sqrt{37} & = \sqrt{\frac{73^2-1}{12^2}} \\
+ & = \sqrt{\frac{73^2}{12^2}\cdot\frac{73^2-1}{73^2}} \\
+ & = \sqrt{\frac{73^2}{12^2}}\sqrt{\frac{73^2-1}{73^2}} \\
+ & = \frac{73}{12}\sqrt{1 - \frac{1}{73^2}} \\
+ & \approx \frac{73}{12}\left(1 - \frac{1}{2\cdot73^2}\right)
+\end{align}
+~~~
 
 构成。
 
@@ -265,7 +265,7 @@ $$
 $$
 f(n) =
 \begin{cases}
-n/2,  & \text{if $n$ is even} \\
+n/2,  & \text{if $n$ is even} \\[0.3em]
 3n+1, & \text{if $n$ is odd}
 \end{cases}
 $$
@@ -303,7 +303,7 @@ $$
 
 #### 使用 \mid 代替 | 作为分隔符
 
-符号|作为分隔符时有排版空间大小的问题，应该使用\mid代替。效果如下：
+符号 `|` 作为分隔符时有排版空间大小的问题，应该使用 `\mid` 代替。效果如下：
 
 $$
 \begin{array}{cc}
@@ -315,7 +315,7 @@ $$
 
 #### 多重积分
 
-对于多重积分，不要使用\int\int此类的表达，应该使用\iint \iiint等特殊形式。效果如下：
+对于多重积分，不要使用 `\int\int` 此类的表达，应该使用 `\iint`，`\iiint` 等特殊形式。效果如下：
 
 $$
 \begin{array}{cc}
@@ -326,7 +326,7 @@ $$
 \end{array}
 $$
 
-此外，在微分前应该使用\,来增加些许空间，否则TEX会将微分紧凑地排列在一起。如下：
+此外，在微分前应该使用 `\,` 来增加些许空间，否则TEX会将微分紧凑地排列在一起。如下：
 
 $$
 \begin{array}{cc}
@@ -338,7 +338,7 @@ $$
 
 ### 连分数
 
-书写连分数表达式时，请使用\cfrac代替\frac或者\over两者效果对比如下：
+书写连分数表达式时，请使用 `\cfrac` 代替 `\frac` 或者 `\over`， 两者效果对比如下：
 
 $$
 x = a_0 + \cfrac{1^2}{a_1
@@ -360,22 +360,24 @@ $$
 
 我们可以使用 `\require` 命令来调用相应的包，例如这样的代码：
 
-	$\require{AMScd}$
-	\begin{CD}
-	    A @>a>> B\\
-	    @V b V V\# @VV c V\\
-	    C @>>d> D
-	\end{CD}
+~~~latex
+\require{amscd}
+\begin{CD}
+    A @>a>> B\\
+    @V b V V\# @VV c V\\
+    C @>>d> D
+\end{CD}
+~~~
 
-会调用 **AMScd** 包来画流程图，而且整个页面只需要在第一次使用前调用一次即可。
+会调用 **amscd** 包来画流程图，而且整个页面只需要在第一次使用前调用一次即可。
 
 $$
-	\require{AMScd}
-	\begin{CD}
-	    A @>a>> B\\
-	    @V b V V\# @VV c V\\
-	    C @>>d> D
-	    \end{CD}
+\require{amscd}
+\begin{CD}
+    A @>a>> B\\
+    @V b V V\# @VV c V\\
+    C @>>d> D
+    \end{CD}
 $$
 
 `@>>>` 是向右的箭头，
