use webp for smaller picture size

--- a/_posts/2015-05-04-using-zsh.md
+++ b/_posts/2015-05-04-using-zsh.md
@@ -46,10 +46,10 @@ title:        让 Zsh 变得炫酷起来
 
 这个插件一个好处就是如果你在 `git hub` 目录，Shell 会明确显示 ‘git’ 和 branch，如图所示：
 
-![zsh with github](/imgs/zsh/github.png)
+![zsh with github](/imgs/zsh/github.webp)
 
 非常人性化，包括它的更新也很方便，附一张 **Oh-my-zsh** 的更新图：
 
-![Oh-my-zsh-update](/imgs/zsh/update.png)
+![Oh-my-zsh-update](/imgs/zsh/update.webp)
 
 好好享受漂亮的 **zsh** 吧。
