--- a/_posts/2016-01-14-cnn.md
+++ b/_posts/2016-01-14-cnn.md
@@ -31,13 +31,13 @@ $$
 
 那这个核可以用来干什么呢？下面举一些直观的例子来看一下卷积运算在图像处理中的应用。处理图像当然要拿出这位美女 **Lena** 了。
 
-![Lena Origin](/imgs/CNN/lena-origin.jpg)
+![Lena Origin](/imgs/CNN/lena-origin.webp)
 
 > The First Lady of Internet
 
 下面列举出一些常见的卷积核，这几个卷积核是在 **Gimp** 的[官方文档](http://docs.gimp.org/en/plug-in-convmatrix.html)中看到的，不得不说这个开源神器是在强大，还提供自己加卷积处理图像的例子。
 
-![Gimp](/imgs/CNN/gimp.png)
+![Gimp](/imgs/CNN/gimp.webp)
 
 > `Filters` > `Generic` > `Convolution Matrix` 就可以找到这一功能
 
@@ -103,7 +103,7 @@ imshow(img_new)
 
 话说回来，使用文档中介绍的五种核得到的结果如下：
 
-![Convolution Lena](/imgs/CNN/lena.jpg)
+![Convolution Lena](/imgs/CNN/lena.webp)
 
 > 五种核表现出的直观理解
 
@@ -113,7 +113,7 @@ imshow(img_new)
 
 卷积神经网络 (Convolution Neural Networks) 在深度学习中有着举足轻重的地位，尤其是应用到图像分类 (Image Classification) 中是取得了很大的突破，例如 Facebook 中的图片自动标注。当然最近也有人将它运用到自然语言处理中 (Natural Language Processing)[^1], 下面我们来看看一个典型的卷积神经网络的结构。
 
-![Typical CNN](/imgs/CNN/Typical_cnn.png)
+![Typical CNN](/imgs/CNN/Typical_cnn.webp)
 
 > 一个典型的神经网络，其中包含两个卷积层，两个子采样层。图片来源 [Wikipedia](https://en.wikipedia.org/wiki/Convolution)
 
@@ -125,7 +125,7 @@ imshow(img_new)
 
 我们已经知道，一个卷积核会将图片生成为另一幅图像。所以我们在每个卷积层使用多个不同的卷积核组成一个卷积核组，不同的核在输入图片上的运算会得到不同的结果，就相当于一张图像的不同通道。当然这些卷积核组我们可以自动的学习出来。在此之后对于每个通道我们都会在后面加上非线性的激励函数。一般来说是 RELU、sigmoid 或者是 tanh 函数，加上非线性的激励函数就是给系统加上非线性因素，因为线性模型的表达能力往往不够[^2]。
 
-![一个用于图像的CNN网络](/imgs/CNN/convnet.jpg)
+![一个用于图像的CNN网络](/imgs/CNN/convnet.webp)
 
 > 一个使用 RELU 作为激励函数的 CNN 网络
 
