Optimize site performance, SEO, accessibility and update research focus
- Replace CSS @import with link tags and preconnect hints for fonts/CDNs
- Add font-display: swap to all @font-face in blog-lotus.css
- Replace animate.css library with single fadeInDown keyframe
- Add descriptive alt text to all images in index.html
- Gate MathJax loading behind page.math frontmatter flag
- Remove console.log statements from fractal.js
- Add Open Graph meta tags to index.html and blog layout
- Add JSON-LD BlogPosting structured data to post layout
- Fix duplicate rel=nofollow in post.html and about.html
- Remove unused .blue/.green/.pink utility classes
- Update research focus to AIGC, AI Agents and Genomics

--- a/_posts/2015-05-27-MathJax.md
+++ b/_posts/2015-05-27-MathJax.md
@@ -5,6 +5,7 @@ authorurl:    http://www.omegaxy.com
 categories:   Markdown
 tags:         Mathjax Latex
 title:        Mathjax 与 Markdown 公式简介
+math:         true
 ---
 
 [TOC]
