--- a/_posts/2016-01-14-cnn.md
+++ b/_posts/2016-01-14-cnn.md
@@ -5,6 +5,7 @@ authorurl:    http://www.omegaxy.com
 categories:   DL
 tags:         ml dl
 title:        卷积神经网络的理解
+math:         true
 ---
 
 在泛函分析中，**卷积 (Convolution)** 或叫旋积、摺积是通过两个函数 $f$ 和 $g$ 生成第三个函数的一种数学算子，表征函数 $f$ 与经过翻转和平移的 $g$ 的重叠部分的面积。若 $f$ 与 $g$ 在 $\mathbb{R}$ 上可积，则数学上的公式为：
